package treulo.src.Controler;

import treulo.src.model.Model;

public class ChangeDisplayControl {
    Model model;

    public ChangeDisplayControl (Model m)
    {
        model=m;
    }
}
