package treulo.src.Controler.task;

import treulo.src.model.Model;

import java.util.ArrayList;

public class EditCollaboratorControl {
    Model model;
    /*ArrayList <Colaborator> colaborator;

    public EditCollaboratorControl (Model m,ArrayList<Colaborator> col)
    {
        model=m;
        colaborator=col;
    }*/
}
